--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,13 +23,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <div class="logo">
-                <img class="waste" src="/Images/logo.svg" alt="Logo">
-                <span> Wastexpert</span>
-            </div>
+            <span class="logo">
+                <img src="/Images/logo.svg" alt="Logo">
+                <h2>Wastexpert</h2>
+            </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" id="icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav  mb-2 mb-lg-0">
@@ -54,29 +54,12 @@
         </div>
     </nav>
 
-
-
-    <div class="firstSection ">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <h1>Love to Chill with the ‘BIG’ boys?</h1>
-                    <p>Then sign up, Get screened to be our Agent. We will provide you with all the neccessary equipment
-                        to
-                        work
-                        with, as well
-                        as Customers to transact with. Start earn immediately!</p>
-                    <button><a href="">Become an agent</a></button>
-
-                </div>
-                <div class="col-lg-7 ">
-                    <img src="/Images/agentWithBackground.svg" alt="Agent" class="img-fluid">
-
-                </div>
-
-            </div>
-        </div>
-    </div>
+    <div class="row">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126676.58061440958!2d3.2899349428957976!3d7.167186750372689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103a4bf6995dfc7f%3A0x6734fcf62892478d!2sAbeokuta!5e0!3m2!1sen!2sng!4v1649036799295!5m2!1sen!2sng"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </row>
 
 
 
@@ -98,7 +81,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="/main.js"></script>
 </body>
 
 </html>
