done with the second section of FAQ section

--- a/FAQ.html
+++ b/FAQ.html
@@ -78,6 +78,34 @@
         </div>
     </div>
 
+    <div class="secondSection">
+        <div class="container">
+            <div class="col-12">
+                <h2>Here is why You should roll with us</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/Images/profit.svg" alt="">
+                    <p>Get commission on every kilogram
+                        collected from your outlet</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="/Images/truck.svg" alt="">
+                    <p class="para">Get disposal traffic directed to your outlet
+                        by our collectors and individuals
+                        looking to drop-off</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="/Images/settings.svg" alt="">
+                    <p>Get all the tools you need to run your business
+                        with zero setup cost</p>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
 
 
 
