--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="fa fa-bars" id="hamburger"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ms-auto ">
+                    <ul class="navbar-nav ms-auto float-end ">
                         <li class="nav-item px-3 ">
                             <a class="nav-link " aria-current="page" href="#">About Us</a>
                         </li>
@@ -50,8 +50,7 @@
                             <a class="nav-link" href="#">FAQ</a>
                         </li>
                         <li class="nav-item px-3">
-                            <button type="button" class="btn" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal">
+                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Login
                             </button>
                         </li>
@@ -59,8 +58,92 @@
                 </div>
             </div>
         </nav>
+    </header>
+    <!--About-->
+    <section class="AboutUs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 pt-5">
+                    <h2>About us <span></span></h2>
+                    <p class="justify-content-center">Wastexpert is a waste recycling and social benefit venture
+                        borne out of sheer passion and vision
+                        to transform our environment into a zero landfill and zero waste nation. We operates an
+                        incentive-based scheme which collects recyclable materials from enerprie and households by
+                        giving them a chance to generate value from their waste and provide a reliable supply of raw
+                        material to the local recycling industry. And in turn rewards them with “Points” which they can
+                        accumulate overtime and cash out or use to redeem/shop for household items offered through our
+                        Wastexpert- store.
+                    </p>
+                </div>
+                <div class="col-md-6 pt-5">
+                    <img src="/Asset/img/AboutUSvolunteer.svg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
 
-        <!-- <nav id="navbar">
+    </section>
+    <section class="WasteMenace">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 pt-5">
+                    <img src="/Asset/img/about-us-wasteArea.svg" class="img-fluid" alt="">
+                </div>
+                <div class="col-md-6 pt-5">
+                    <h2>Waste Menace</h2>
+                    <p class="justify-content-center">It is a common sight to see our streets, drainages, roadsides and
+                        even dumpsites packed with recyclable packaging materials which are carelessly disposed of by
+                        users. This practice often poses environmental hazards to communities as they experience flood
+                        due to the blockage of water drainages by most of these recyclables which has become the fastest
+                        growing packaging option in the beverage and food industry. Lagos State (our pilot location) has
+                        an estimated population of 17 million people and daily generates an average of 9,000 metric
+                        tonnes of waste of which 1,200 metric tonnes are currently recycled. Recyclables form the bulk
+                        of identifiable items at refuse points in Nigeria. Often times, the drainage channels in the
+                        metropolis cities are blocked by these recyclable items and the resultant effect during the
+                        rainy season is flood and breeding ground for harmful organisms.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="OurSolution">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 pt-5">
+                    <h2>Our Solution</h2>
+                    <p class="justify-content-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis
+                        leo auctor a scelerisque vel sit cras eu consectetur. Viverra venenatis, mauris diam dolor cras
+                        a. Lectus massa aenean neque pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque
+                        pulvinar a, magna. Vulputate. sit amet, consectetur adipiscing elit. Mollis leo auctor a
+                        scelerisque vel sit cras eu consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus
+                        massa aenean neque pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a,
+                        magna. Vulputate. consectetur adipiscing elit. Mollis leo auctor a scelerisque vel sit cras eu
+                        consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque pulvinar
+                        tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna.
+                    </p>
+                </div>
+                <div class="col-md-6 pt-5">
+                    <img src="/Asset/img/wastebinAbtUS.svg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="advice">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <img src="/Asset/img/aboutUSrecycle-bin.svg" alt="">
+                </div>
+                <div class="col-md-8">
+                    <h3 class="text-align-center"> If you care about the environment and how it will affect mankind,
+                        then recycling shoudn’t take a second thought.</h3>
+                    <p class="pt-3">Jeffery Sanderson</p>
+                </div>
+                <div class="col-md-2">
+                    <img src="/Asset/img/aboutUSecology.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <nav id="navbar">
             <div class="wasteX">
                 <img src="/Asset/img/LogoWX.svg" alt=""> <span>Wastexpert</span>
             </div>
@@ -72,7 +155,7 @@
                 <li> <a class="nav-link" href="#">Contact us</a></li>
                 <li> <a class="nav-link" href="#">FAQ</a></li>
                 <!-- <li> <a class="nav-link" href="#">Services</a></li> -->
-        <!-- <button type="button" class="btn " id="btn2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <!-- <button type="button" class="btn " id="btn2" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Login
                 </button>
             </ul>
@@ -81,8 +164,7 @@
             </button>
             <div class="fa fa-bars" id="hamburger"></div>
             <!-- <i id="ba" class="fa fa-bars"  width="200px" ></i> -->
-        <!-- </nav> -->
-    </header>
+    <!-- </nav> -->
     <!-- <section class="aboutUs">
         <div class="container">
             <div class="col pt-4">
