--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <section class="advice">
         <div class="container">
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-2 recycle">
                     <img src="/Asset/img/aboutUSrecycle-bin.svg" alt="">
                 </div>
                 <div class="col-md-8">
@@ -137,12 +137,95 @@
                         then recycling shoudn’t take a second thought.</h3>
                     <p class="pt-3">Jeffery Sanderson</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 eco">
                     <img src="/Asset/img/aboutUSecology.svg" alt="">
                 </div>
             </div>
         </div>
     </section>
+
+    <!-------------------Footer----------------------->
+    <footer>
+        <div class="newsletter">
+        <div class="container">
+                <div class="row">
+                    <div class="col-md-3 pt-5">
+                        <img src="/Asset/img/footerLogo.svg" class="img-fluid" alt="">
+                    </div>
+                    <div class=" enter col-md-9 pt-5">
+                        <form action="">
+                            <label for="e-mail">Subscribe to our Newsletter</label> 
+                            <input type="email" name="" placeholder="Enter your email address here" id=""> <button
+                                type="submit">Sign Up</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+            <div class="row ft pt-5">
+                <div class="col-md-5 text-align-center ftext ">
+                    <p>Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
+                        to transform our environment into a zero landfill and zero waste nation. We operates an
+                        incentive-based scheme which collects recyclable materials from post consumers and in turn
+                        rewards them with “Points” which they can accumulate overtime and cash out or use to redeem/shop
+                        for household items offered through our Wastexpert store.</p>
+                </div>
+                <div class="col-md-2 px-3 abt">
+                    <ul>
+                        <li> <a href="">About</a></li> <br>
+                        <li class="dn"> <a href="">Our Mission</a></li>
+                        <li class="dn"><a href="">Vision</a></li>
+                        <li class="dn"><a href="">Solutions</a></li>
+                        <li class="dn"><a href="">Teams</a></li>
+                    </ul>
+
+                </div>
+                <div class="col-md-2 contact">
+                    <ul>
+                        <li> <a href="">Contact Us</a></li><br>
+                        <li class="dn"> <a href="">Our Mission</a></li>
+                        <li class="dn"> <a href="">Vision</a></li>
+                        <li class="dn"> <a href="">Solutions</a></li>
+                        <li class="dn"><a href="">Teams</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 services">
+                    <ul>
+                        <li> <a href=""> Service </a> </li> <br>
+                        <li class="dn"> <a href=""> Waste to wealth pick up</a></li>
+                        <li class="dn"> <a href=""> Flip-it</a></li>
+                        <li class="dn"> <a href=""> Waste drop point</a></li>
+                        <li class="dn"> <a href=""> Corporate Recycling</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container Copyright">
+            <div>
+
+                Copyright © 2020, Created by Wastexpert Team
+            </div>
+<div>
+
+    <img src="/Asset/img/fb.svg" alt="">
+    <img src="/Asset/img/instagram.svg" alt="">
+    <img src="/Asset/img/twitter.svg" alt="">
+    <img src="/Asset/img/linkedin.svg" alt="">
+    <img src="/Asset/img/mail.svg" alt="">
+</div>
+
+            <!-- <i class="fa fa-facebook-official"></i>
+            <i class="fa fa-twitter-square"></i>
+            <i class="fa fa-instagram" ></i>
+            <i class="fa fa-linkedin-square"></i> -->
+            <!-- <i class="fa fa-etsy" aria-hidden="true"></i> -->
+            <!-- <i class= "fa fa-bars"></i> -->
+        </div>
+    </footer>
+
+
     <!-- <nav id="navbar">
             <div class="wasteX">
                 <img src="/Asset/img/LogoWX.svg" alt=""> <span>Wastexpert</span>
